--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -137,9 +137,9 @@ header {
       rgba(0, 0, 0, 0.4),
       rgba(0, 0, 0, 0.4)
     ),
-    url(../images/aht-bg.png);
+    url(../images/aht-bg-1.jpeg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(../images/aht-bg.png);
+    url(../images/aht-bg-1.jpeg);
   background-size: cover;
   background-position: center;
   height: 950px;
@@ -707,6 +707,7 @@ footer {
 
 .footer-top .footer-top__soical .footer-top__soical--icon i {
   font-size: 2rem;
+  color: #777;
 }
 
 /* FOOTER BOTTOM*/
