--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -316,6 +316,7 @@ header nav {
 
 .section-overview .section-overview__item img {
   width: 100%;
+  height: 100%;
   transform: scale(1);
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
