--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -98,9 +98,9 @@ img {
   &:visited {
     border: 1px solid #fff;
     color: #fff;
-    padding: 2rem 4rem;
+    padding: 13px 38px;
     display: inline-block;
-    margin-top: 3rem;
+    margin-top: 43px;
     font-size: 1.4rem;
     text-transform: uppercase;
     letter-spacing: 2px;
