--- a/resources/sass/components/_footer.scss
+++ b/resources/sass/components/_footer.scss
@@ -2,7 +2,7 @@ footer {
   background-color: #222;
 
   .footer-top {
-    padding: 100px 0 50px 0;
+    padding: 85px 0 50px 0;
     border-bottom: 1px solid #777;
     display: flex;
     flex-direction: column;
@@ -10,8 +10,8 @@ footer {
     align-items: center;
 
     &__logo {
-      width: 200px;
-      margin-bottom: 40px;
+      width: 285px;
+      margin-bottom: -5px;
 
       &__img {
         width: 100%;
@@ -37,7 +37,7 @@ footer {
         }
 
         &:not(:last-child) {
-          margin-right: 50px;
+          margin-right: 40px;
         }
       }
     }
@@ -50,6 +50,7 @@ footer {
     margin-bottom: 5rem;
 
     &__columns {
+      margin-left: 7px;
       & h2 {
         font-size: 1.8rem;
         color: #fff;
@@ -59,7 +60,7 @@ footer {
       }
 
       & .footer-bottom__column--link {
-        margin-bottom: 2.5rem;
+        margin-bottom: 15px;
 
         &:hover a {
           color: #ccc;
