--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -1,117 +1,122 @@
-
 /* ----------------------------------------------- */
 /* HEADER */
 /* ----------------------------------------------- */
 
 .header-top {
-    justify-content: space-between;
-    flex-wrap: nowrap;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  display: flex;
+  padding: 2.3rem 0;
+  &__main,
+  &__right {
     display: flex;
-    padding: 2.3rem 15px;
-    &__main,
-    &__right {
-      display: flex;
-      align-items: center;
-    }
-  
-    /* HEADER TOP LOGO */
-    &__logo {
-      width: 20.5rem;
-    }
-    /* HEADER TOP MAIN */
-  
-    &__main {
-      &--link {
-        &:not(:first-child) {
-          margin-left: 3rem;
-        }
-        a {
-          font-size: 1.6rem;
-          line-height: 28px;
-          color: #ffffff;
-          font-weight: 400;
-          font-family: "Poppins";
-          text-align: center;
-        }
+    align-items: center;
+  }
+
+  /* HEADER TOP LOGO */
+  &__logo {
+    width: 20.5rem;
+  }
+  /* HEADER TOP MAIN */
+
+  &__main {
+    width: 675px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-left: -48px;
+    &--link {
+      &:not(:last-child) {
+        // margin-right: 68px;
       }
-    }
-  
-    /* HEADER TOP RIGHT */
-  
-    &__right {
-      &--icon,
-      &--icon i {
-        color: #fff;
+
+      a {
         font-size: 1.6rem;
-        margin-right: 15px;
-        cursor: pointer;
-      }
-  
-      &--icon {
-        span {
-          color: #777;
-        }
-        &:hover i {
-          color: #555;
-        }
-        &:last-child,
-        &:last-child i {
-          margin-right: 0;
-        }
-      }
-      /* HEADER ICON MOBILE */
-  
-      &__mobile--icon {
-        display: none;
-        cursor: pointer;
-        &--icon i {
-          font-size: 3.2rem;
-          color: #fff;
-        }
+        line-height: 28px;
+        color: #ffffff;
+        font-weight: 400;
+        font-family: "Poppins";
+        text-align: center;
       }
     }
   }
-  
-  /* HEADER CONTENT */
-  
-  .header-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-  
-    &__left,
-    &__right {
-      width: 55%;
-    }
-  
-    & h1,
-    & h3 {
+
+  /* HEADER TOP RIGHT */
+
+  &__right {
+    &--icon,
+    &--icon i {
       color: #fff;
-      font-family: "Poppins";
-      font-weight: 700;
+      font-size: 1.6rem;
+      margin-right: 24px;
+      cursor: pointer;
     }
-  
-    & p {
-      color: #fff;
-      font-weight: 400;
-      margin-bottom: 60px;
-      font-size: 1.4rem;
+
+    &--icon {
+      span {
+        color: #777;
+      }
+      &:hover i {
+        color: #555;
+      }
+      &:last-child,
+      &:last-child i {
+        margin-right: 0;
+      }
     }
-  
-    & h1 {
-      font-size: 6rem;
-      line-height: 5rem;
-    }
-    & h3 {
-      font-size: 4rem;
-      line-height: 2.4rem;
-      margin-bottom: 45px;
-      margin-top: 25px;
+    /* HEADER ICON MOBILE */
+
+    &__mobile--icon {
+      display: none;
+      cursor: pointer;
+      &--icon i {
+        font-size: 3.2rem;
+        color: #fff;
+      }
     }
   }
+}
+
+/* HEADER CONTENT */
+
+.header-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  &__left,
+  &__right {
+    width: 55%;
+  }
+
+  & h1,
+  & h3 {
+    color: #fff;
+    font-family: "Poppins";
+    font-weight: 700;
+  }
+
+  & p {
+    color: #fff;
+    font-weight: 400;
+    font-size: 1.4rem;
+    padding-top: 45px;
+    line-height: 20px;
+  }
+
+  & h1 {
+    font-size: 6rem;
+    line-height: 5rem;
+    
+  }
+  & h3 {
+    font-size: 4rem;
+    line-height: 1.4rem;
+    margin-top: 30px;
+  }
+}
