--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   flex-wrap: nowrap;
   display: flex;
-  padding: 2.3rem 0;
+  padding: 2.3rem 15px;
   &__main,
   &__right {
     display: flex;
@@ -94,6 +94,11 @@
     width: 50%;
   }
 
+  &__left {
+    margin-top: 2px;
+    margin-left: 15px;
+  }
+
   & h1,
   & h3 {
     color: #fff;
@@ -106,13 +111,12 @@
     font-weight: 400;
     font-size: 1.4rem;
     padding-top: 45px;
-    line-height: 20px;
+    line-height: 23px;
   }
 
   & h1 {
     font-size: 6rem;
     line-height: 5rem;
-    
   }
   & h3 {
     font-size: 4rem;
