--- a/resources/sass/components/_sidebar.scss
+++ b/resources/sass/components/_sidebar.scss
@@ -11,7 +11,7 @@
 }
 
 .sidebarMenuInner {
-  width: 100%;
+  width: 100vw;
   margin: 0;
   padding: 0;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
