--- a/resources/sass/components/_aboutus.scss
+++ b/resources/sass/components/_aboutus.scss
@@ -11,14 +11,14 @@
   & .mySlides {
     display: none;
     & p {
-      font-size: 1.8rem;
+      font-size: 18px;
       color: #777;
       text-align: center;
       margin-bottom: 20px;
       font-weight: 400;
     }
     & h2 {
-      font-size: 2rem;
+      font-size: 20px;
       font-weight: bold;
       text-transform: uppercase;
       color: #000;
@@ -83,8 +83,8 @@
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
+  height: 10px;
+  width: 10px;
   margin: 0 2px;
   background-color: #ccc;
   border-radius: 50%;
@@ -138,15 +138,17 @@
 }
 
 .about-us .slick-dots li button:before {
-  font-size: 15px
+  font-size: 10px;
 }
 
 .about-us .slick-dots li:hover button:before {
-  color: #dd2f31
+  color: #dd2f31;
 }
 
 .about-us .slick-dots li.slick-active button:before {
-  color: #dd2f31
+  color: #dd2f31;
+  width: 10px;
+  height: 10px;
 }
 
 .about-us .slick-dots {
@@ -155,4 +157,3 @@
 .about-us .slick-dots li {
   margin: 0;
 }
-
