--- a/resources/sass/components/_footer.scss
+++ b/resources/sass/components/_footer.scss
@@ -20,7 +20,7 @@ footer {
     }
 
     & p {
-      font-size: 1.4rem;
+      font-size: 14px;
       color: #777;
       text-align: center;
       margin-bottom: 45px;
@@ -32,7 +32,7 @@ footer {
 
       &--icon {
         & i {
-          font-size: 2rem;
+          font-size: 20px;
           color: #777;
         }
 
@@ -52,7 +52,7 @@ footer {
     &__columns {
       margin-left: 7px;
       & h2 {
-        font-size: 1.8rem;
+        font-size: 18px;
         color: #fff;
         font-weight: 700;
         margin-bottom: 3rem;
@@ -67,13 +67,13 @@ footer {
         }
 
         & a {
-          font-size: 1.4rem;
+          font-size: 14px;
           color: #777;
           font-weight: 400;
         }
 
         & i {
-          font-size: 1.4rem;
+          font-size: 14px;
           color: #777;
           margin-right: 1.5rem;
         }
