--- a/resources/sass/components/_overview.scss
+++ b/resources/sass/components/_overview.scss
@@ -52,7 +52,7 @@
 
       p {
         text-align: center;
-        font-size: 1.4rem;
+        font-size: 14px;
         color: #777;
       }
     }
