--- a/resources/sass/components/_product.scss
+++ b/resources/sass/components/_product.scss
@@ -31,15 +31,15 @@
     &-card {
       position: relative;
       width: calc(100% / 4);
-      padding:0 15px;
+      padding:15px;
       margin-top: 30px;
-
-      &:nth-child(4n+1) {
-        padding-left: 0;
-      }
-      &:nth-child(4n) {
-        padding-right: 0;
-      }
+      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+      // &:nth-child(4n+1) {
+      //   padding-left: 0;
+      // }
+      // &:nth-child(4n) {
+      //   padding-right: 0;
+      // }
 
 
       &:hover {
@@ -56,7 +56,7 @@
       & h3,
       & h2 {
         color: #000;
-        font-size: 1.4rem;
+        font-size: 14px;
         margin: 0 30px;
       }
 
