--- a/resources/sass/components/_sidebar.scss
+++ b/resources/sass/components/_sidebar.scss
@@ -2,12 +2,16 @@
   height: 500px;
   position: fixed;
   left: 0;
-  width: 450px;
+  width: 100vw;
   margin-top: 70px;
-  transform: translateX(-450px);
+  transform: translateX(-100vw);
   z-index: 10;
   transition: transform 250ms ease-in-out;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+  -webkit-transform: translateX(-100vw);
+  -moz-transform: translateX(-100vw);
+  -ms-transform: translateX(-100vw);
+  -o-transform: translateX(-100vw);
 }
 
 .sidebarMenuInner {
