--- a/resources/sass/main.css
+++ b/resources/sass/main.css
@@ -60,7 +60,7 @@ body {
 }
 
 .row {
-  max-width: 117rem;
+  max-width: 1170px;
   margin: 0 auto;
 }
 
@@ -150,7 +150,7 @@ header nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 2.3rem 15px;
+  padding: 2.3rem 0;
   /* HEADER TOP LOGO */
   /* HEADER TOP MAIN */
   /* HEADER TOP RIGHT */
@@ -199,8 +199,18 @@ header nav {
 .header-top__right--icon i {
   color: #fff;
   font-size: 1.6rem;
-  margin-right: 24px;
+  margin-right: 21px;
   cursor: pointer;
+}
+
+.header-top__right--icon:nth-child(2),
+.header-top__right--icon i:nth-child(2) {
+  margin-right: 18px;
+}
+
+.header-top__right--icon:nth-child(3),
+.header-top__right--icon i:nth-child(3) {
+  margin-right: -5px;
 }
 
 .header-top__right--icon span {
@@ -211,9 +221,9 @@ header nav {
   color: #555;
 }
 
-.header-top__right--icon:last-child,
-.header-top__right--icon:last-child i {
-  margin-right: 0;
+.header-top__right--icon:last-child {
+  margin-right: -24px;
+  margin-left: 17px;
 }
 
 .header-top__right__mobile--icon {
@@ -245,7 +255,6 @@ header nav {
 
 .header-content__left {
   margin-top: 2px;
-  margin-left: 15px;
 }
 
 .header-content h1,
@@ -258,7 +267,7 @@ header nav {
 .header-content p {
   color: #fff;
   font-weight: 400;
-  font-size: 1.4rem;
+  font-size: 14px;
   padding-top: 45px;
   line-height: 23px;
 }
@@ -362,7 +371,7 @@ header nav {
 
 .section-overview__item:nth-child(2n) p {
   text-align: center;
-  font-size: 1.4rem;
+  font-size: 14px;
   color: #777;
 }
 
@@ -440,16 +449,10 @@ header nav {
 .section-product .tabcontent-card {
   position: relative;
   width: calc(100% / 4);
-  padding: 0 15px;
+  padding: 15px;
   margin-top: 30px;
-}
-
-.section-product .tabcontent-card:nth-child(4n+1) {
-  padding-left: 0;
-}
-
-.section-product .tabcontent-card:nth-child(4n) {
-  padding-right: 0;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .section-product .tabcontent-card:hover {
@@ -465,7 +468,7 @@ header nav {
 .section-product .tabcontent-card h3,
 .section-product .tabcontent-card h2 {
   color: #000;
-  font-size: 1.4rem;
+  font-size: 14px;
   margin: 0 30px;
 }
 
@@ -556,7 +559,7 @@ header nav {
 }
 
 .slideshow-container .mySlides p {
-  font-size: 1.8rem;
+  font-size: 18px;
   color: #777;
   text-align: center;
   margin-bottom: 20px;
@@ -564,7 +567,7 @@ header nav {
 }
 
 .slideshow-container .mySlides h2 {
-  font-size: 2rem;
+  font-size: 20px;
   font-weight: bold;
   text-transform: uppercase;
   color: #000;
@@ -633,8 +636,8 @@ header nav {
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
+  height: 10px;
+  width: 10px;
   margin: 0 2px;
   background-color: #ccc;
   border-radius: 50%;
@@ -688,7 +691,7 @@ header nav {
 }
 
 .about-us .slick-dots li button:before {
-  font-size: 15px;
+  font-size: 10px;
 }
 
 .about-us .slick-dots li:hover button:before {
@@ -697,6 +700,8 @@ header nav {
 
 .about-us .slick-dots li.slick-active button:before {
   color: #dd2f31;
+  width: 10px;
+  height: 10px;
 }
 
 .about-us .slick-dots {
@@ -762,7 +767,7 @@ footer .footer-top__logo__img {
 }
 
 footer .footer-top p {
-  font-size: 1.4rem;
+  font-size: 14px;
   color: #777;
   text-align: center;
   margin-bottom: 45px;
@@ -778,7 +783,7 @@ footer .footer-top__soical {
 }
 
 footer .footer-top__soical--icon i {
-  font-size: 2rem;
+  font-size: 20px;
   color: #777;
 }
 
@@ -800,7 +805,7 @@ footer .footer-bottom__columns {
 }
 
 footer .footer-bottom__columns h2 {
-  font-size: 1.8rem;
+  font-size: 18px;
   color: #fff;
   font-weight: 700;
   margin-bottom: 3rem;
@@ -816,13 +821,13 @@ footer .footer-bottom__columns .footer-bottom__column--link:hover a {
 }
 
 footer .footer-bottom__columns .footer-bottom__column--link a {
-  font-size: 1.4rem;
+  font-size: 14px;
   color: #777;
   font-weight: 400;
 }
 
 footer .footer-bottom__columns .footer-bottom__column--link i {
-  font-size: 1.4rem;
+  font-size: 14px;
   color: #777;
   margin-right: 1.5rem;
 }
@@ -844,10 +849,9 @@ footer .footer-bottom__columns .footer-bottom__column--link i {
   height: 500px;
   position: fixed;
   left: 0;
-  width: 450px;
+  width: 100vw;
   margin-top: 70px;
-  -webkit-transform: translateX(-450px);
-          transform: translateX(-450px);
+  transform: translateX(-100vw);
   z-index: 10;
   -webkit-transition: -webkit-transform 250ms ease-in-out;
   transition: -webkit-transform 250ms ease-in-out;
@@ -855,10 +859,14 @@ footer .footer-bottom__columns .footer-bottom__column--link i {
   transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7)));
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+  -webkit-transform: translateX(-100vw);
+  -moz-transform: translateX(-100vw);
+  -ms-transform: translateX(-100vw);
+  -o-transform: translateX(-100vw);
 }
 
 .sidebarMenuInner {
-  width: 100%;
+  width: 100vw;
   margin: 0;
   padding: 0;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
@@ -987,19 +995,40 @@ input[type="checkbox"]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 }
 
 /* TABLET  */
-@media screen and (max-width: 56.25rem) {
+@media screen and (max-width: 1025px) {
+  .header-top #js--menu {
+    display: none;
+  }
+  .sidebarIconToggle {
+    display: block;
+  }
+  #sidebarMenu {
+    display: block;
+  }
+  #sidebarMenu {
+    display: none;
+  }
+  .header-top__logo {
+    margin-left: 4rem;
+    width: 165px;
+  }
   html {
     font-size: 50%;
   }
   .section-product,
   .row.footer-bottom,
   .row.footer-top,
+  .header-top,
   .section-brand,
   .overview-mobile,
+  .header-content__left,
   .row.section-aboutus {
     padding-left: 15px;
     padding-right: 15px;
   }
+}
+
+@media screen and (max-width: 56.25rem) {
   .header-content .header-content__left {
     width: 100%;
   }
@@ -1012,23 +1041,8 @@ input[type="checkbox"]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   .tabcontent .tabcontent-card {
     width: calc(100% / 2);
   }
-  #sidebarMenu {
-    display: none;
-  }
-  .header-top__logo {
-    margin-left: 4rem;
-  }
   .row.section-brand .section-brand__img {
     width: calc(100% / 2);
-  }
-  .header-top #js--menu {
-    display: none;
-  }
-  .sidebarIconToggle {
-    display: block;
-  }
-  #sidebarMenu {
-    display: block;
   }
   .row.footer-bottom,
   #tab1.tabcontent {
@@ -1058,9 +1072,6 @@ input[type="checkbox"]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   #section-overview__mobile .section-overview__item h2 {
     margin: 2rem 0;
     font-size: 3rem;
-  }
-  #section-overview__mobile .section-overview__item p {
-    font-size: 2rem;
   }
   #section-overview__mobile .section-overview__item:nth-child(2n) {
     padding: 10px;
@@ -1102,21 +1113,9 @@ input[type="checkbox"]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   .section-product__tab .section-product__tab--link {
     font-size: 1.5rem;
   }
-  .section-aboutus h1 {
-    font-size: 2.5rem;
-  }
-  .slideshow-container .mySlides p {
-    font-size: 1.2rem;
-  }
-  .footer-bottom__columns h2 {
-    font-size: 1.2rem;
-  }
   .tabcontent .tabcontent-card h3,
   .tabcontent .tabcontent-card h2 {
     margin: 0 10px;
-  }
-  .tabcontent-card .tabcontent-card__action .tabcontent-card__action--icon i {
-    font-size: 10px;
   }
   .tabcontent-card .tabcontent-card__action .tabcontent-card__action--icon {
     padding: 5px;
