--- a/resources/sass/main.css
+++ b/resources/sass/main.css
@@ -22,6 +22,17 @@
 /* ----------------------------------------------- */
 /* BASIC SETUP */
 /* ----------------------------------------------- */
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Bold.ttf");
+  font-weight: 700;
+}
+
 :root {
   --color-primary: #dd2f31;
   --color-light-1: #fff;
@@ -451,13 +462,11 @@ header nav {
   width: calc(100% / 4);
   padding: 15px;
   margin-top: 30px;
-  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .section-product .tabcontent-card:hover {
-  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   cursor: pointer;
 }
 
@@ -691,7 +700,7 @@ header nav {
 }
 
 .about-us .slick-dots li button:before {
-  font-size: 10px;
+  font-size: 20px;
 }
 
 .about-us .slick-dots li:hover button:before {
@@ -1034,6 +1043,10 @@ input[type="checkbox"]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   }
   .header-content .header-content__left h1 {
     font-size: 5rem;
+  }
+  .section-product .tabcontent-card {
+    -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+            box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   }
   .section-product .tabcontent-card__action {
     display: block;
