--- a/resources/sass/components/_brand.scss
+++ b/resources/sass/components/_brand.scss
@@ -3,16 +3,30 @@
 /* ----------------------------------------------- */
 
 .section-brand {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 77px;
-  margin-bottom: 25px;
-  border-top: 1px solid #ccc;
-  padding-top: 28px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 78px;
+    margin-bottom: 25px;
+    border-top: 1px solid #ccc;
+    padding-top: 28px;
+  
+    &__img {
+      justify-self: center;
+      width: calc(100% / 6);
+      padding: 5px 25px;
+      img {
+        margin-left: -15px;
+      }
 
-  &__img {
-    justify-self: center;
-    width: calc(100% / 6);
-    padding: 0 15px;
+      &:nth-child(3) {
+        img {
+          margin-left: -7px;
+        }
+      }
+
+      &:nth-child(4), &:nth-child(5), &:nth-child(6) {
+        margin-left: 0;
+      }
+    }
   }
-}
+  
