--- a/resources/sass/components/_footer.scss
+++ b/resources/sass/components/_footer.scss
@@ -50,7 +50,19 @@ footer {
     margin-bottom: 5rem;
 
     &__columns {
-      margin-left: 7px;
+      margin-left: 0;
+
+      &:nth-child(2) {
+        margin-left: 8px;
+      }
+
+      &:nth-child(3) {
+        margin-left: 12px;
+      }
+
+      &:nth-child(4) {
+        margin-left: 20px;
+      }
       & h2 {
         font-size: 18px;
         color: #fff;
