--- a/resources/sass/components/_overview.scss
+++ b/resources/sass/components/_overview.scss
@@ -13,6 +13,7 @@
     background-color: #fff;
     z-index: 10;
     overflow: hidden;
+    height: 250px;
 
     &:nth-child(1) {
       order: 1;
@@ -24,6 +25,9 @@
       order: 3;
     }
     &:nth-child(4) {
+      .overview-icon {
+        margin-top: 17px;
+      }
       order: 4;
     }
     &:nth-child(5) {
@@ -36,9 +40,9 @@
     &:nth-child(2n) {
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      padding: 10px;
+      padding: 30px;
       img {
         object-fit: contain;
       }
@@ -47,13 +51,13 @@
         font-size: 1.8rem;
         font-weight: bold;
         text-transform: uppercase;
-        margin: 2rem 0;
       }
 
       p {
         text-align: center;
         font-size: 14px;
         color: #777;
+        margin-bottom: 4px;
       }
     }
     &:nth-child(2n + 1) {
