--- a/resources/sass/components/_product.scss
+++ b/resources/sass/components/_product.scss
@@ -3,17 +3,18 @@
 /* ----------------------------------------------- */
 
 .section-product {
-  margin-top: 80px;
+  margin-top: 92px;
 
   &__tab {
     border-bottom: 1px solid #ccc;
+    margin-bottom: 15px;
 
     &--link {
       border: none;
       background: transparent;
       text-transform: uppercase;
       font-size: 1.8rem;
-      padding: 10px 20px;
+      padding: 10px 16px;
       font-weight: 700;
       line-height: 24px;
       font-family: inherit;
@@ -31,8 +32,8 @@
     &-card {
       position: relative;
       width: calc(100% / 4);
-      padding:15px;
-      margin-top: 30px;
+      margin-bottom: 30px;
+      height: 347px;
       // &:nth-child(4n+1) {
       //   padding-left: 0;
       // }
@@ -40,28 +41,34 @@
       //   padding-right: 0;
       // }
 
-
-      &:hover {
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-        cursor: pointer;
+      &__item {
+        margin: 0 15px;
+        padding-bottom: 23px;
+        &:hover {
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          cursor: pointer;
+        }
       }
 
-
-
       &__img {
-        height: 267px;
+        height: 230px;
+        padding-top: 25px;
+      }
+
+      & h3 {
+        margin-top: 50px;
       }
 
       & h3,
       & h2 {
         color: #000;
         font-size: 14px;
-        margin: 0 30px;
+        margin-left: 20px;
       }
 
       & h2 {
         font-weight: bold;
-        margin-bottom: 25px;
+        // margin-top: -10px;
       }
 
       &__action {
