--- a/resources/sass/main.css
+++ b/resources/sass/main.css
@@ -124,7 +124,6 @@ img {
   color: #fff;
   padding: 13px 38px;
   display: inline-block;
-  margin-top: 55px;
   font-size: 1.4rem;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -261,11 +260,14 @@ header nav {
 }
 
 .header-content__left, .header-content__right {
-  width: 50%;
+  width: 47%;
 }
 
 .header-content__left {
-  margin-top: 2px;
+  height: 315px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-left: -1px;
 }
 
 .header-content h1,
@@ -273,25 +275,25 @@ header nav {
   color: #fff;
   font-family: "Poppins";
   font-weight: 700;
+  line-height: 1;
 }
 
 .header-content p {
   color: #fff;
   font-weight: 400;
   font-size: 14px;
-  padding-top: 45px;
-  line-height: 23px;
+  margin-bottom: 60px;
 }
 
 .header-content h1 {
   font-size: 6rem;
-  line-height: 5rem;
+  margin-top: -15px;
+  margin-bottom: 17px;
 }
 
 .header-content h3 {
   font-size: 4rem;
-  line-height: 1.4rem;
-  margin-top: 30px;
+  margin-bottom: 28px;
 }
 
 /* ----------------------------------------------- */
@@ -313,6 +315,7 @@ header nav {
   background-color: #fff;
   z-index: 10;
   overflow: hidden;
+  height: 250px;
 }
 
 .section-overview__item:nth-child(1) {
@@ -339,6 +342,10 @@ header nav {
           order: 4;
 }
 
+.section-overview__item:nth-child(4) .overview-icon {
+  margin-top: 17px;
+}
+
 .section-overview__item:nth-child(5) {
   -webkit-box-ordinal-group: 6;
       -ms-flex-order: 5;
@@ -359,13 +366,13 @@ header nav {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10px;
+  padding: 30px;
 }
 
 .section-overview__item:nth-child(2n) img {
@@ -377,13 +384,13 @@ header nav {
   font-size: 1.8rem;
   font-weight: bold;
   text-transform: uppercase;
-  margin: 2rem 0;
 }
 
 .section-overview__item:nth-child(2n) p {
   text-align: center;
   font-size: 14px;
   color: #777;
+  margin-bottom: 4px;
 }
 
 .section-overview__item:nth-child(2n + 1) {
@@ -426,11 +433,12 @@ header nav {
 /* SECTION PRODUCT */
 /* ----------------------------------------------- */
 .section-product {
-  margin-top: 80px;
+  margin-top: 92px;
 }
 
 .section-product__tab {
   border-bottom: 1px solid #ccc;
+  margin-bottom: 15px;
 }
 
 .section-product__tab--link {
@@ -438,7 +446,7 @@ header nav {
   background: transparent;
   text-transform: uppercase;
   font-size: 1.8rem;
-  padding: 10px 20px;
+  padding: 10px 16px;
   font-weight: 700;
   line-height: 24px;
   font-family: inherit;
@@ -460,30 +468,39 @@ header nav {
 .section-product .tabcontent-card {
   position: relative;
   width: calc(100% / 4);
-  padding: 15px;
-  margin-top: 30px;
+  margin-bottom: 30px;
+  height: 347px;
 }
 
-.section-product .tabcontent-card:hover {
+.section-product .tabcontent-card__item {
+  margin: 0 15px;
+  padding-bottom: 23px;
+}
+
+.section-product .tabcontent-card__item:hover {
   -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
           box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   cursor: pointer;
 }
 
 .section-product .tabcontent-card__img {
-  height: 267px;
+  height: 230px;
+  padding-top: 25px;
+}
+
+.section-product .tabcontent-card h3 {
+  margin-top: 50px;
 }
 
 .section-product .tabcontent-card h3,
 .section-product .tabcontent-card h2 {
   color: #000;
   font-size: 14px;
-  margin: 0 30px;
+  margin-left: 20px;
 }
 
 .section-product .tabcontent-card h2 {
   font-weight: bold;
-  margin-bottom: 25px;
 }
 
 .section-product .tabcontent-card__action {
@@ -573,6 +590,7 @@ header nav {
   text-align: center;
   margin-bottom: 20px;
   font-weight: 400;
+  line-height: 30px;
 }
 
 .slideshow-container .mySlides h2 {
@@ -591,7 +609,7 @@ header nav {
 .slideshow-container .mySlides .slide-person {
   width: 80px;
   height: 80px;
-  margin: 53px auto 30px;
+  margin: 53px auto 27px;
 }
 
 .slideshow-container .mySlides img {
@@ -643,22 +661,6 @@ header nav {
 }
 
 /* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 10px;
-  width: 10px;
-  margin: 0 2px;
-  background-color: #ccc;
-  border-radius: 50%;
-  display: inline-block;
-  -webkit-transition: background-color 0.6s ease;
-  transition: background-color 0.6s ease;
-}
-
-.dot:hover {
-  background-color: #dd2f31;
-}
-
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
@@ -687,7 +689,7 @@ header nav {
 
 /* SECTION ABOUT US*/
 .section-aboutus {
-  margin-top: 120px;
+  margin-top: 80px;
 }
 
 .section-aboutus h2 {
@@ -700,7 +702,7 @@ header nav {
 }
 
 .about-us .slick-dots li button:before {
-  font-size: 20px;
+  font-size: 40px;
 }
 
 .about-us .slick-dots li:hover button:before {
@@ -730,7 +732,7 @@ header nav {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-top: 77px;
+  margin-top: 78px;
   margin-bottom: 25px;
   border-top: 1px solid #ccc;
   padding-top: 28px;
@@ -740,7 +742,19 @@ header nav {
   -ms-grid-column-align: center;
       justify-self: center;
   width: calc(100% / 6);
-  padding: 0 15px;
+  padding: 5px 25px;
+}
+
+.section-brand__img img {
+  margin-left: -15px;
+}
+
+.section-brand__img:nth-child(3) img {
+  margin-left: -7px;
+}
+
+.section-brand__img:nth-child(4), .section-brand__img:nth-child(5), .section-brand__img:nth-child(6) {
+  margin-left: 0;
 }
 
 footer {
@@ -810,7 +824,19 @@ footer .footer-bottom {
 }
 
 footer .footer-bottom__columns {
-  margin-left: 7px;
+  margin-left: 0;
+}
+
+footer .footer-bottom__columns:nth-child(2) {
+  margin-left: 8px;
+}
+
+footer .footer-bottom__columns:nth-child(3) {
+  margin-left: 12px;
+}
+
+footer .footer-bottom__columns:nth-child(4) {
+  margin-left: 20px;
 }
 
 footer .footer-bottom__columns h2 {
@@ -1014,9 +1040,6 @@ input[type="checkbox"]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   #sidebarMenu {
     display: block;
   }
-  #sidebarMenu {
-    display: none;
-  }
   .header-top__logo {
     margin-left: 4rem;
     width: 165px;
@@ -1024,7 +1047,7 @@ input[type="checkbox"]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   html {
     font-size: 50%;
   }
-  .section-product,
+  .section-product__tab,
   .row.footer-bottom,
   .row.footer-top,
   .header-top,
@@ -1044,18 +1067,18 @@ input[type="checkbox"]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   .header-content .header-content__left h1 {
     font-size: 5rem;
   }
-  .section-product .tabcontent-card {
-    -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-            box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  }
   .section-product .tabcontent-card__action {
     display: block;
+  }
+  .section-product .tabcontent-card__item {
+    -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+            box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   }
   .tabcontent .tabcontent-card {
     width: calc(100% / 2);
   }
   .row.section-brand .section-brand__img {
-    width: calc(100% / 2);
+    width: calc(100% / 3);
   }
   .row.footer-bottom,
   #tab1.tabcontent {
@@ -1119,16 +1142,15 @@ input[type="checkbox"]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
         -ms-flex-order: 6;
             order: 6;
   }
-  section.row.section-brand {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-  }
   .section-product__tab .section-product__tab--link {
     font-size: 1.5rem;
   }
   .tabcontent .tabcontent-card h3,
   .tabcontent .tabcontent-card h2 {
     margin: 0 10px;
+  }
+  .tabcontent .tabcontent-card .tabcontent-card__item h3 {
+    line-height: 30px;
   }
   .tabcontent-card .tabcontent-card__action .tabcontent-card__action--icon {
     padding: 5px;
