--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -120,7 +120,8 @@
     color: #fff;
     font-weight: 400;
     font-size: 14px;
-    margin-bottom: 60px;
+    margin-bottom: 55px;
+    line-height: 24px;
   }
 
   & h1 {
