--- a/resources/sass/main.css
+++ b/resources/sass/main.css
@@ -282,7 +282,8 @@ header nav {
   color: #fff;
   font-weight: 400;
   font-size: 14px;
-  margin-bottom: 60px;
+  margin-bottom: 55px;
+  line-height: 24px;
 }
 
 .header-content h1 {
@@ -496,7 +497,7 @@ header nav {
 .section-product .tabcontent-card h2 {
   color: #000;
   font-size: 14px;
-  margin-left: 20px;
+  margin-left: 17px;
 }
 
 .section-product .tabcontent-card h2 {
@@ -702,7 +703,7 @@ header nav {
 }
 
 .about-us .slick-dots li button:before {
-  font-size: 40px;
+  font-size: 10px;
 }
 
 .about-us .slick-dots li:hover button:before {
@@ -711,8 +712,6 @@ header nav {
 
 .about-us .slick-dots li.slick-active button:before {
   color: #dd2f31;
-  width: 10px;
-  height: 10px;
 }
 
 .about-us .slick-dots {
@@ -843,12 +842,24 @@ footer .footer-bottom__columns h2 {
   font-size: 18px;
   color: #fff;
   font-weight: 700;
-  margin-bottom: 3rem;
+  margin-bottom: 25px;
   text-transform: uppercase;
 }
 
 footer .footer-bottom__columns .footer-bottom__column--link {
   margin-bottom: 15px;
+}
+
+footer .footer-bottom__columns .footer-bottom__column--link:nth-child(2) {
+  margin-bottom: 19px;
+}
+
+footer .footer-bottom__columns .footer-bottom__column--link:nth-child(3) {
+  margin-bottom: 18px;
+}
+
+footer .footer-bottom__columns .footer-bottom__column--link:nth-child(4) {
+  margin-bottom: 17px;
 }
 
 footer .footer-bottom__columns .footer-bottom__column--link:hover a {
